--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "yarn": "1.x"
     },
     "scripts": {
-        "start": "nodemon server.ts",
+        "start": "node server.js",
+        "start-dev": "nodemon server.ts",
         "build": "tsc"
     },
     "dependencies": {
