--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "trendincy.api",
     "version": "1.0.0",
-    "main": "server.ts",
+    "main": "server.js",
     "repository": "https://github.com/matthew-heyner/trendincy.api.git",
     "author": "Matthew Heyner <mheyner@gmail.com>",
     "license": "MIT",
@@ -10,22 +10,21 @@
         "yarn": "1.x"
     },
     "scripts": {
-        "start": "nodemon server.ts localhost 8080",
-        "build": "tsc"
+        "start": "nodemon src/server.js 127.0.0.1 8080",
+        "serve": "NODE_ENV=production & node build/server.js",
+        "test": "mocha"
     },
     "dependencies": {
-        "axios": "^0.19.2",
+        "cookie-parser": "^1.4.4",
+        "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "twitter": "^1.7.1"
+        "express-session": "^1.17.0",
+        "oauth": "^0.9.15"
     },
     "devDependencies": {
-        "@babel/preset-typescript": "^7.10.4",
-        "@types/express": "^4.17.7",
-        "@types/node": "^14.6.0",
-        "babel-cli": "^6.26.0",
-        "babel-preset-env": "^1.7.0",
+        "eslint": "^7.8.1",
+        "mocha": "^8.1.3",
         "nodemon": "^2.0.4",
-        "ts-node": "^9.0.0",
-        "typescript": "^4.0.2"
+        "sinon": "^9.0.3"
     }
 }
