--- a/package.json
+++ b/package.json
@@ -6,25 +6,39 @@
     "author": "Matthew Heyner <mheyner@gmail.com>",
     "license": "MIT",
     "engines": {
-        "node": "14.x",
+        "node": "16.x",
         "yarn": "1.x"
     },
     "scripts": {
-        "start": "nodemon src/server.js 127.0.0.1 8080",
-        "serve": "NODE_ENV=production & node build/server.js",
-        "test": "mocha"
+        "start": "NODE_ENV=production node ./bin/www",
+        "dev": "NODE_ENV=development nodemon ./bin/www",
+        "test": "jest",
+        "test:watch": "jest --watchAll",
+        "lint": "eslint .",
+        "lint:fix": "eslint --fix ."
     },
     "dependencies": {
         "cookie-parser": "^1.4.4",
-        "dotenv": "^8.2.0",
+        "dotenv": "^10.0.0",
         "express": "^4.17.1",
+        "helmet": "^3.23.3",
         "express-session": "^1.17.0",
+        "http-errors": "^1.8.0",
         "oauth": "^0.9.15"
     },
     "devDependencies": {
         "eslint": "^7.8.1",
-        "mocha": "^8.1.3",
+        "jest": "^24.9.0",
         "nodemon": "^2.0.4",
-        "sinon": "^9.0.3"
-    }
+        "sinon": "^9.0.3",
+        "supertest": "^3.4.2"
+    },
+    "jest": {
+        "testEnvironment": "node"
+      },
+      "nodemonConfig": {
+        "ignore": [
+          "*.test.js"
+        ]
+      }
 }
