migrating to AWS

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,12 +21,14 @@ phases:
       - yarn
   build:
     commands:
-      - echo Build started on `date`
-      - echo Compiling the Node.js code
-      - mocha test.js
+      - echo Build started.
+      - echo Tests.
+      - yarn test
+      - echo Running build.
+      - yarn start
   post_build:
     commands:
-      - echo Build completed on `date`
+      - echo Build completed.
 # Include only the files required for your application to run.
 # Do not use recursively include artifacts from node_modules directory as it will include unnecessary packages 
 # used only for building and testing.
