--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
         "yarn": "1.x"
     },
     "scripts": {
-        "start": "NODE_ENV=production node ./bin/www",
-        "dev": "NODE_ENV=development nodemon ./bin/www",
+        "start": "NODE_ENV=production node ./bin/app.js",
+        "dev": "NODE_ENV=development nodemon ./bin/app.js",
+        "build": "npx babel src --out-dir bin",
         "test": "jest",
         "test:watch": "jest --watchAll",
         "lint": "eslint .",
@@ -21,12 +22,14 @@
         "cookie-parser": "^1.4.4",
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
-        "helmet": "^3.23.3",
         "express-session": "^1.17.0",
+        "helmet": "^3.23.3",
         "http-errors": "^1.8.0",
         "oauth": "^0.9.15"
     },
     "devDependencies": {
+        "@babel/cli": "^7.15.4",
+        "@babel/preset-env": "^7.15.6",
         "eslint": "^7.8.1",
         "jest": "^24.9.0",
         "nodemon": "^2.0.4",
@@ -35,10 +38,10 @@
     },
     "jest": {
         "testEnvironment": "node"
-      },
-      "nodemonConfig": {
+    },
+    "nodemonConfig": {
         "ignore": [
-          "*.test.js"
+            "*.test.js"
         ]
-      }
+    }
 }
