--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
         "yarn": "1.x"
     },
     "scripts": {
-        "start": "NODE_ENV=production node ./bin/app.js",
-        "dev": "NODE_ENV=development nodemon ./bin/app.js",
-        "build": "npx babel src --out-dir bin",
+        "start": "NODE_ENV=production node ./src/app.js",
+        "dev": "NODE_ENV=development nodemon ./src/app.js",
         "test": "jest",
         "test:watch": "jest --watchAll",
         "lint": "eslint .",
